--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     </div>
     <div class="mb-3">
         <select id="operation" class="form-select">
-            <option value="+">+</option>
-            <option value="-">-</option>
-            <option value="*">*</option>
-            <option value="/">/</option>
+            <option value="" disabled selected>Choose an operation</option>
+            <option value="+">Addition</option>
+            <option value="-">Subtraction</option>
+            <option value="*">Multiplication</option>
+            <option value="/">Division</option>
         </select>
     </div>
     <button onclick="calculate()" class="btn btn-warning w-100">Calculate</button>
