--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="bg-gradient d-flex align-items-center justify-content-center">
 
-<div class="calculator-box">
-    <h3>Basic Calculator</h3>
+<div class="calculator-box card shadow-lg p-4 text-white">
+    <h3 class="text-center mb-4">Basic Calculator</h3>
+
     <div class="mb-3">
-        <input type="number" id="num1" class="form-control" placeholder="Enter first number">
+        <input type="number" id="num1" class="form-control form-control-lg" placeholder="Enter first number">
     </div>
+
     <div class="mb-3">
-        <input type="number" id="num2" class="form-control" placeholder="Enter second number">
+        <input type="number" id="num2" class="form-control form-control-lg" placeholder="Enter second number">
     </div>
+
     <div class="mb-3">
-        <select id="operation" class="form-select">
+        <select id="operation" class="form-select form-select-lg">
             <option value="" disabled selected>Choose an operation</option>
             <option value="+">Addition</option>
             <option value="-">Subtraction</option>
@@ -26,9 +29,11 @@
             <option value="/">Division</option>
         </select>
     </div>
-    <button onclick="calculate()" class="btn btn-warning w-100">Calculate</button>
-    <div class="result" id="result">Result: </div>
-    <div class="footer-text">Created by Juliana Josh Yumi Columbres</div>
+
+    <button onclick="calculate()" class="btn btn-warning btn-lg w-100 mt-3">Calculate</button>
+
+    <div class="result mt-4 text-center" id="result">Result: </div>
+    <div class="footer-text text-center mt-3 small text-light-emphasis">Created by Juliana Josh Yumi Columbres</div>
 </div>
 
 <script src="script.js"></script>
